--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <title>Final Task</title>
-   <link rel="stylesheet" href="css/task.css">
+   <link rel="stylesheet" href="task.css">
  </head>
  <body>
   <div class="container">
